--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ disk.vmdk
 target/usr/include/ncursesw
 target/usr/etc/profile.d
 target/usr/libexec
-target/usr/x86_64-cavos
+target/usr/x86_64-tivos
 target/usr/x86_64-linux-musl
 
 # Chroot stuff
