--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,5 +1,5 @@
-COMPILER = ~/opt/cross/bin/x86_64-tivos-gcc
-LINKER = ~/opt/cross/bin/x86_64-tivos-ld
+COMPILER = ~/opt/cross/bin/x86_64-cavos-gcc
+LINKER = ~/opt/cross/bin/x86_64-cavos-ld
 ASSEMBLER = nasm
 # -w(no warnings) -g(dev)
 CFLAGS = -m64 -g -c -ffreestanding -Wall -Werror -fcommon -Iinclude/ -Inetworking/lwip/include/ -fPIE -mno-80387 \
@@ -21,12 +21,12 @@ LDFLAGS = -m elf_x86_64 \
     -z max-page-size=0x1000 -T link.ld
 
 TARGET = ../../target
-MOUNTPOINT = /tivosmnt
+MOUNTPOINT = /cavosmnt
 TOOLS = ../../tools
 
 TARGET_IMG = ../../disk.img
 TARGET_VMWARE = ../../disk.vmdk
-TARGET_ISO = ../../tivOS.iso
+TARGET_ISO = ../../cavOS.iso
 
 OUTPUT = $(TARGET)/boot/kernel.bin
 
@@ -42,9 +42,9 @@ all: $(C_OBJS) $(ASM_OBJS) $(C_EXTRA_OBJS)
 	mkdir $(TARGET)/ -p
 	mkdir $(TARGET)/boot/ -p
 	$(LINKER) $(LDFLAGS) -o $(OUTPUT) $(C_OBJS) $(C_EXTRA_OBJS) $(ASM_OBJS)
-	
+
 memory/malloc.o:memory/malloc.c
-	$(COMPILER) $(CFLAGS) memory/malloc.c -o memory/malloc.o -DHAVE_MMAP=0 -DLACKS_TIME_H=1 -DLACKS_SYS_PARAM_H=1 -LACKS_STRING_H=0 -Dmalloc_getpagesize=4096 -DNO_MALLOC_STATS=1 -DMORECORE_CONTIGUOUS=0 -DUSE_LOCKS=2
+	$(COMPILER) $(CFLAGS) memory/malloc.c -o memory/malloc.o -DHAVE_MMAP=0 -DLACKS_TIME_H=1 -DLACKS_SYS_PARAM_H=1 -LACKS_STRING_H=0 -Dmalloc_getpagesize=4096 -DNO_MALLOC_STATS=1 -DMORECORE_CONTIGUOUS=0 -DUSE_LOCKS=2 "-DMALLOC_FAILURE_ACTION=abort()"
 
 drivers/printf.o:drivers/printf.c
 	$(COMPILER) $(CFLAGS) drivers/printf.c -o drivers/printf.o -DPRINTF_INCLUDE_CONFIG_H=1
@@ -69,7 +69,7 @@ vmware:
 tools:
 	chmod +x $(TOOLS)/toolchain/get_tools.sh
 	$(TOOLS)/toolchain/get_tools.sh
-	
+
 clean:
 # rm -f $(TARGET)/obj/*.o
 	find . -name '*.o' -delete
@@ -78,7 +78,7 @@ clean:
 
 qemu:
 	qemu-system-x86_64 -d guest_errors -serial stdio -drive file=$(TARGET_IMG),format=raw,id=disk,if=none -device ahci,id=ahci -device ide-hd,drive=disk,bus=ahci.0 -m 4g -netdev user,id=mynet0 -net nic,model=rtl8139,netdev=mynet0
-	
+
 qemu_dbg:
 	qemu-system-x86_64 -d guest_errors -no-shutdown -no-reboot -serial stdio -drive file=$(TARGET_IMG),format=raw,id=disk,if=none -device ahci,id=ahci -device ide-hd,drive=disk,bus=ahci.0 -m 8g -netdev user,id=mynet0,hostfwd=udp::5555-:69,hostfwd=tcp::5555-:69 -net nic,model=rtl8139,netdev=mynet0 -object filter-dump,id=id,netdev=mynet0,file=../../netdmp.pcapng -s -smp 4
 
